# zerotouch

./: .editorconfig  .gitattributes  ATTRIBUTIONS.md  ATTRIBUTIONS.txt  CONTRIBUTING.md  README.md  ZeroTouch.sln  packages.lock.json
.github/: dependabot.yml
.github/workflows/: conventional-commits.yml  dotnet.yml
ZeroTouch.UI/: ATTRIBUTIONS.txt  App.axaml  App.axaml.cs  Program.cs  ViewLocator.cs  ZeroTouch.UI.csproj  app.manifest
ZeroTouch.UI/Assets/Routes/: route-1.json  route-2.json  route-4.json  route-5.json
ZeroTouch.UI/Converters/: SlideToWidthConverter.cs
ZeroTouch.UI/Navigation/: FocusGroup.cs  FocusItemViewModel.cs  IFocusableItem.cs
ZeroTouch.UI/Services/: AppWebSocketClient.cs  GestureWebSocketClient.cs  MusicPlayerService.cs  WeatherService.cs
ZeroTouch.UI/ViewModels/: DriverStateViewModel.cs  GestureDebugViewModel.cs  MainDashboardViewModel.cs  MainWindowViewModel.cs  ViewModelBase.cs
ZeroTouch.UI/Views/: DriverStateView.axaml  DriverStateView.axaml.cs  GestureDebugView.axaml  GestureDebugView.axaml.cs  MainDashboardView.axaml  MainDashboardView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
ZeroTouch.UI/tests/: pyproject.toml  ws_server.py
docs/deployment/: jetson.md  macos.md
scripts/: run-jetson.sh
